# craft-ai-client-rust

./: .travis.yml  Cargo.toml  LICENSE  README.md
src/: agent.rs  cli.yml  client.rs  error.rs  lib.rs  main.rs  token.rs  utils.rs
src/types/: configuration.rs  mod.rs  property.rs
tests/: common.rs  test_agent_creation.rs  test_ping.rs
