[package]
name = "craft_ai"
version = "0.1.0"
description = "craft ai rust client & CLI"
authors = ["craft ai <contact@craft.ai>"]
edition = "2018"
license = "BSD-3-Clause"

[dependencies]
clap = { version = "2", features = ["yaml"] }
dotenv = "0.15.0"
base64 = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
